realm: various fixes to new realm build system
* General reformatting
* Default enable GOMP and KMP if OPENMP_SYSTEM_RUNTIME is not enabled
* Add sanitizer support via REALM_SANITIZER
* Add missing Threads library to Realm dependencies
* Add some cmake options to Kokkos to mirror what is done in CI (still WIP)
* Use the kokkos version currently used in CI
* Add missing dependencies for UCX and UCC when found in the system
* Separate out realm_obj and realm targets to clean up the install
  * This means realm_obj is no longer installed, but requires all properties,
    dependencies, etc duplicated
  * realm_obj is still useful for picking out internal symbols for unit testing
    that would otherwise be hidden, but the same tested bits are used for both
    unit testing and in the final library
* Add realm_fatbin_tgt for realm and realm_obj to depend on, fixing a race in realm_fatbin
* Include CTest to remove warning about no CDash configuration when running ctest
* Fix up test launcher logic for MPIEXEC so it is used whenever MPIEXEC is found
* Fix up install include paths
* Only include Requires.private in pkgconfig for static builds (WIP)
  * Likely will be split into realm.pc and realm-static.pc
* remove cuda_memcpy.cu from standard sources
* Install realm_defines.h into realm directory
* Prefix ucx bootstrap variables
* Don't use gtest_discover_tests with sanitizers, as it adds extra output and confuses the parser
* Properly quote the TEST_LAUNCHER in case it is empty

--- a/realm/benchmarks/CMakeLists.txt
+++ b/realm/benchmarks/CMakeLists.txt
@@ -18,16 +18,18 @@ set(BENCHMARK_ARGS
     CACHE STRING "Default arguments for benchmarks"
 )
 
-if(REALM_USE_MPI
-   OR REALM_USE_UCX
-   OR REALM_USE_GASNETEX
-)
-  list(PREPEND BENCHMARK_LAUNCHER "${MPIEXEC_EXECUTABLE}" ${MPIEXEC_NUMPROC_FLAG} 2
-       ${MPIEXEC_PREFLAGS}
+if(NOT BENCHMARK_PROCESSORS)
+  if(MPIEXEC_EXECUTABLE)
+    set(BENCHMARK_PROCESSORS 2)
+  else()
+    set(BENCHMARK_PROCESSORS 1)
+  endif()
+endif()
+
+if(MPIEXEC_EXECUTABLE)
+  list(PREPEND BENCHMARK_LAUNCHER "${MPIEXEC_EXECUTABLE}" ${MPIEXEC_NUMPROC_FLAG}
+       ${BENCHMARK_PROCESSORS} ${MPIEXEC_PREFLAGS}
   )
-  set(BENCHMARK_PROCESSORS 2)
-elseif(NOT BENCHMARK_PROCESSORS)
-  set(BENCHMARK_PROCESSORS 1)
 endif()
 
 if(REALM_USE_CUDA OR REALM_USE_HIP)
@@ -94,7 +96,7 @@ add_benchmark(
 set_tests_properties(
   ${_bench_list}
   PROPERTIES TEST_LAUNCHER
-             ${BENCHMARK_LAUNCHER}
+             "${BENCHMARK_LAUNCHER}"
              PROCESSORS
              ${BENCHMARK_PROCESSORS}
              ENVIRONMENT
