build: more fixes for prealm build and linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -762,7 +762,7 @@ set(Legion_MAX_NUM_NODES 1024 CACHE STRING
 set(Legion_MAX_NUM_PROCS 64 CACHE STRING
     "Maximum number of processors (per node) supported by the runtime -- MUST be a power of two.")
 
-option(Legion_USE_PREALM "Build Realm with support for PRealm")
+  option(Legion_USE_PREALM "Build Realm with support for PRealm" OFF)
 if(Legion_USE_PREALM)
   set(REALM_USE_PREALM ON)
 endif()
