--- a/tools/legion_prof_rs/Cargo.toml
+++ b/tools/legion_prof_rs/Cargo.toml
@@ -25,15 +25,15 @@ nvtxw = ["dep:legion_prof_viewer", "legion_prof_viewer?/nvtxw"]
 [dependencies]
 clap = { version = "4", features = ["cargo", "derive"] }
 csv = "1.1"
-derive_more = { version = "0.99", default-features = false, features = ["add", "display", "from"] }
+derive_more = { version = "2", default-features = false, features = ["add", "display", "from"] }
 flate2 = "1"
 nom = "7"
 num_enum = "0.7"
 rayon = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-legion_prof_viewer = { version = "0.4.0", optional = true }
-url = { version = "2" }
+legion_prof_viewer = { version = "0.5.0", optional = true }
+url = "2"
 slice-group-by = "0.3" # because &[]::group_by is unstable
 log = "0.4"
 env_logger = "0.10"
