--- a/test/realm/unit_tests/CMakeLists.txt
+++ b/test/realm/unit_tests/CMakeLists.txt
@@ -50,6 +50,7 @@ list(APPEND REALM_TESTS
   sparsity_map_test.cc
   ucx_mpool_test.cc
   topology_test.cc
+  auto_actmsg_test.cc
  )
 
 list(APPEND UCX_SOURCES
