--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -30,6 +30,7 @@ list(APPEND REALM_SRC
   realm/transfer/lowlevel_disk.cc
   realm/transfer/address_list.h            realm/transfer/address_list.cc
   realm/transfer/addrsplit_channel.h       realm/transfer/addrsplit_channel.cc
+  realm/fragmented_message.h               realm/fragmented_message.cc
   realm/transfer/addrsplit_channel.inl
   realm/transfer/channel.h                 realm/transfer/channel.cc
   realm/transfer/channel_common.h          realm/transfer/channel_common.cc
