realm: make changes to a new cmake build systems

--- a/realm/tests/CMakeLists.txt
+++ b/realm/tests/CMakeLists.txt
@@ -83,6 +83,9 @@ endif()
 list(
   APPEND
   REALM_UNIT_TESTS
+  auto_actmsg_test.cc
+  fragmented_message_test.cc
+  incoming_message_manager_test.cc
   memcpy_channel_test.cc
   comp_queue_test.cc
   event_test.cc
