--- a/tools/legion_prof_rs/Cargo.toml
+++ b/tools/legion_prof_rs/Cargo.toml
@@ -18,6 +18,7 @@ rust-version = "1.85"
 default = ["archiver", "client", "server", "viewer"]
 archiver = ["dep:legion_prof_viewer"]
 client = ["dep:legion_prof_viewer", "legion_prof_viewer?/client"]
+duckdb = ["dep:legion_prof_viewer", "legion_prof_viewer?/duckdb"]
 server = ["dep:legion_prof_viewer", "legion_prof_viewer?/server"]
 viewer = ["dep:legion_prof_viewer"]
 nvtxw = ["dep:legion_prof_viewer", "legion_prof_viewer?/nvtxw"]
@@ -32,11 +33,11 @@ num_enum = "0.7"
 rayon = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-legion_prof_viewer = { version = "0.5.0", optional = true }
+legion_prof_viewer = { version = "0.6.0", optional = true }
 url = "2"
 slice-group-by = "0.3" # because &[]::group_by is unstable
 log = "0.4"
-env_logger = "0.10"
+env_logger = "0.11"
 nonmax = { version = "0.5.5", features = ["serde"] }
 petgraph = "0.7"
 
