realm: initial implementation of Realm C API, no IndexSpace and Instance

--- a/realm/src/CMakeLists.txt
+++ b/realm/src/CMakeLists.txt
@@ -45,6 +45,7 @@ set(REALM_SOURCES
     threads.cc
     shm.cc
     hardware_topology.cc
+    realm_c.cc
     fragmented_message.cc
     transfer/lowlevel_disk.cc
     transfer/address_list.cc
