--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory(reduce_future)
 add_subdirectory(ctrl_repl_safety)
 add_subdirectory(rendering)
 add_subdirectory(realm)
+add_subdirectory(realm/c)
 add_subdirectory(gather_perf)
 add_subdirectory(performance/realm/event_latency)
 add_subdirectory(performance/realm/task_throughput)
