--- a/cmake/realm_defines.h.in
+++ b/cmake/realm_defines.h.in
@@ -78,5 +78,6 @@
 
 #cmakedefine REALM_USE_SHM
 #cmakedefine REALM_HAS_POSIX_FALLOCATE64
+#cmakedefine REALM_TIMERS_USE_RDTSC 1
 
 #cmakedefine REALM_RESPONSIVE_TIMELIMIT @REALM_RESPONSIVE_TIMELIMIT@
